doc: Add section on how to exit PSPP to the tutorial.
Daniel Schlieper reported that he had trouble figuring out how to
exit.  The FINISH command was already documented, but it wasn't
mentioned in the tutorial, so perhaps this will help.

Bug #43766.

--- a/doc/tutorial.texi
+++ b/doc/tutorial.texi
@@ -85,6 +85,7 @@ The following sections explain how to define a dataset.
 * Reading data from a pre-prepared PSPP file::  
 * Saving data to a PSPP file.::  
 * Reading data from other sources::  
+* Exiting PSPP::
 @end menu
 
 @node Defining Variables
@@ -286,6 +287,13 @@ separated text, from spreadsheets, databases or other sources.
 In these instances you should
 use the @cmd{GET DATA} command (@pxref{GET DATA}).
 
+@node Exiting PSPP
+@subsection Exiting PSPP
+
+Use the @cmd{FINISH} command to exit PSPP:
+@example
+@prompt{PSPP>} finish.
+@end example
   
 @node Data Screening and Transformation
 @section Data Screening and Transformation
