--- a/doc/pspp.texi
+++ b/doc/pspp.texi
@@ -113,6 +113,7 @@ in the production of this manual.
 * Utilities::                   Other commands.
 
 * Invoking pspp-convert::       Utility for converting among file formats.
+* Invoking pspp-dump-sav::      Utility for examining raw .sav files.
 * Not Implemented::             What's not here yet
 * Bugs::                        Known problems; submitting bug reports.
 
@@ -141,6 +142,7 @@ in the production of this manual.
 @include utilities.texi
 
 @include pspp-convert.texi
+@include pspp-dump-sav.texi
 @include not-implemented.texi
 @include bugs.texi
 
